Fix image image positioning + adjust spacing

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,18 @@
         }
     }
     
+    @media (max-width: 991px) {
+        #main-title {
+            margin-top: 40px;
+        }
+    }
+    
+    @media (min-width: 992px) {
+        #main-title {
+            margin-top: 120px;
+        }
+    }
+    
     .strength-level {
         text-transform: unset;
     }
@@ -153,6 +165,7 @@
     
     #home #main-title {
         font-variant: small-caps;
+        font-size: 48px;
     }
     
     h2 {
@@ -187,10 +200,6 @@
         color: inherit;
     }
     
-    .contact-other-ways {
-        margin-top: 100px;
-    }
-    
     .btn svg {
         vertical-align: -2px
     }
@@ -211,18 +220,6 @@
         border-color: white;
     }
     
-    @media (max-width: 960px) {
-        #main-title {
-            margin-top: 40px;
-        }
-    }
-    
-    @media (min-width: 961px) {
-        #main-title {
-            margin-top: 120px;
-        }
-    }
-    
     #copyright {
         font-size: 16px;
     }
@@ -230,4 +227,12 @@
     .row>.col>label {
         padding-left: calc((var(--bs-gutter-x)/ 2) + 12px);
         padding-right: calc((var(--bs-gutter-x)/ 2) + 12px);
+    }
+    
+    .mb-6 {
+        margin-bottom: 80px;
+    }
+    
+    .mb-7 {
+        margin-bottom: 100px;
     }
